--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    ```<title>Siva karnan.- Digital Portfolio</title>
+    ```<title>NAVEEN M- Digital Portfolio</title>
 ```    <style>
         body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #E3F2FD; }
         .header { background: #B71C1C; color: white; text-align: left; padding: 30px; display: flex; align-items: center; }
@@ -23,7 +23,7 @@
     <div class="header">
         <img src="profile.jpg" alt="Profile Picture" class="profile-img">
         <div class="header-text">
-            <h1>Sivakarnan.</h1>
+            <h1>NAVEEN M</h1>
             <p>An Aspiring IT Professional</p>
         </div>
     </div>
@@ -54,7 +54,7 @@
         </div>
         <div id="resume" class="section">
             <h2>Download Resume</h2>
-            <a href="Resume.pdf" download class="btn">Download Resume</a>
+            <a href="Resume.jpeg" download class="btn">Download Resume</a>
         </div>
     </div>
 </body>
