--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 <body>
     <div class="header">
-        <img src="profile.jpg" alt="Profile Picture" class="profile-img">
+        <img src="profile.jpeg" alt="Profile Picture" class="profile-img">
         <div class="header-text">
             <h1>NAVEEN M</h1>
             <p>An Aspiring IT Professional</p>
